<resources>
    <string name="app_name">umg akademik</string>
    <string name="title_activity_draw">DrawActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="failed_connect_network">data tidak ada pak No Internet Connection!!</string>
    <string name="failed_connect_network2">data tidak ada pak coy No Internet Connection!!</string>
    <string name="menu_search">Search</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_rateapp">Rate App</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Next Page</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_back">Previous Page</string>
    <string name="menu_favorite">My Favorite</string>
    <string name="menu_about">About</string>
    <string name="msg_no_news">Oops, Maaf tidak ada data yang ditampilkan.</string>
    <string name="msg_empty_khs">Maaf tidak ada data yang ditampilkan, nilai khs belum ada.</string>
    <string name="msg_empty_krs">Maaf tidak ada data yang ditampilkan, jadwal KRS belum dimulai.</string>
    <string name="msg_empty_tagihan">Selamat, tidak ada tagihan yang harus dibayar.</string>
    <string name="msg_Oops">Oops, no data here</string>
    <string name="msg_moneytime">Money Time!</string>
    <string name="msg_no_notif">No Notice Right Now!</string>

    <string name="play_more_apps">https://play.google.com/store/apps/nurispakyu</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="content_visibility">@string/content_off</string>
    <string name="content_off">2</string>
    <string name="img_no">No Bookmark Found</string>
    <string name="menu_khs">Pilih Periode Semester</string>

    <!--firebase-->
    <string name="analytics_item_id_1">main_menu</string>
    <string name="analytics_item_id_2">news_list</string>
    <string name="analytics_item_id_3">news_detail</string>
    <string name="analytics_item_name_1">Main Menu</string>
    <string name="analytics_item_name_2">News List</string>
    <string name="analytics_item_name_3">News Detail</string>
    <string name="action_Notification">Notification</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
