<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bg_empty_callback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF5FAFE"
    android:layout_gravity="center">


    <ImageView
        android:id="@+id/img_no_item_payment"
        android:layout_marginTop="50dp"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_empty_payments"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/img_no_item"
        android:layout_marginTop="50dp"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_no_item" />
    <TextView
        android:id="@+id/money_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/msg_moneytime"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/Oops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/msg_Oops"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/no_item_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/msg_no_news"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/no_item_msg_krs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/msg_empty_krs"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_item_msg_tagihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/msg_empty_tagihan"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_item_msg_khs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/msg_empty_khs"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textback"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableStart="@drawable/ic_arrow_back"
        android:textStyle="bold"
        android:text="Back"
        android:textSize="15dp"
        android:textColor="@color/colorPrimary"/>


</LinearLayout>